--- a/index.html
+++ b/index.html
@@ -1,47 +1,80 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>Morningstar Lifestyles</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="assets/css/smoothproducts.css">
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/css/Footer-Clean.css">
+    <link rel="stylesheet" href="assets/css/Footer-Dark.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
-        <div class="container"><img><a class="navbar-brand logo" href="#">Morningstar Lifestyles!</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div
-                class="collapse navbar-collapse" id="navcol-1">
-                <ul class="nav navbar-nav ml-auto">
+    <nav class="navbar navbar-light navbar-expand-md" id="options" style="padding-bottom: 9px;">
+        <div class="container-fluid"><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="navbar-nav mx-auto" style="text-align: center;">
+                    <li class="nav-item"><a class="nav-link active text-nowrap" href="#about">The Morningstar Story</a></li>
+                    <li class="nav-item"><a class="nav-link active text-nowrap" href="#whatwedo">Our Company</a></li>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#">Our Businesses</a>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="#">Medicare</a><a class="dropdown-item" href="#">Consultation</a><a class="dropdown-item" href="https://www.aerosportsparks.ca/" target="_blank">Entertainment</a><a class="dropdown-item" href="#">Realty</a></div>
+                    </li>
+                    <li class="nav-item"><a class="nav-link text-nowrap" href="#">Contact Us</a></li>
                     <li class="nav-item"></li>
-                    <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about-us.html">History</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact-us.html">divisions</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact Us</a></li>
                 </ul>
-        </div>
+            </div>
         </div>
     </nav>
-    <main class="page landing-page">
-        <section class="clean-block clean-hero">
-            <div class="text">
-                <h2>About Us</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+    <nav class="navbar navbar-light navbar-expand-md" id="brand">
+        <div class="container-fluid"><a class="navbar-brand" href="#"><strong>Morningstar Lifestyles</strong></a></div>
+    </nav>
+    <div id="about" style="padding-top: 130px;">
+        <div class="jumbotron">
+            <h1>About Us</h1>
+            <p><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt enim ac condimentum faucibus. Nam rhoncus, nunc id luctus venenatis, justo arcu fermentum lorem, ut vestibulum erat odio a lorem. Ut massa nibh, tristique at leo sed, cursus blandit dolor. Fusce rutrum venenatis accumsan. Fusce gravida consequat urna, vel laoreet sem euismod eget. Nulla facilisi. Maecenas risus diam, tincidunt vitae odio id, auctor sodales purus. Aliquam justo libero, finibus vel ex laoreet, vulputate lobortis lectus. Proin velit magna, rutrum et dignissim ac, aliquam vitae justo. Ut pulvinar, enim et venenatis pretium, nisl ex tristique purus, quis ullamcorper nisi metus vitae libero. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse tempor quam blandit elementum vestibulum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis at semper nibh, non imperdiet nunc.<br><br><br></p>
+            <p></p>
+        </div>
+    </div>
+    <div id="whatwedo">
+        <h1 class="text-center">What we do</h1>
+        <p class="text-center"><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt enim ac condimentum faucibus. Nam rhoncus, nunc id luctus venenatis, justo arcu fermentum lorem, ut vestibulum erat odio a lorem. Ut massa nibh, tristique at leo sed, cursus blandit dolor. Fusce rutrum venenatis accumsan. Fusce gravida consequat urna, vel laoreet sem euismod eget. Nulla facilisi. Maecenas risus diam, tincidunt vitae odio id, auctor sodales purus. Aliquam justo libero, finibus vel ex laoreet, vulputate lobortis lectus. Proin velit magna, rutrum et dignissim ac, aliquam vitae justo. Ut pulvinar, enim et venenatis pretium, nisl ex tristique purus, quis ullamcorper nisi metus vitae libero. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse tempor quam blandit elementum vestibulum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis at semper nibh, non imperdiet nunc.<br><br></p>
+    </div>
+    <div id="foot">
+        <footer class="footer-dark" style="background: rgba(255,255,255,0.1);color: var(--gray-dark);">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6 col-md-3 item">
+                        <h3>Services</h3>
+                        <ul>
+                            <li><a href="#">Web design</a></li>
+                            <li><a href="#">Development</a></li>
+                            <li><a href="#">Hosting</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-6 col-md-3 item">
+                        <h3>About</h3>
+                        <ul>
+                            <li><a href="#">Company</a></li>
+                            <li><a href="#">Team</a></li>
+                            <li><a href="#">Careers</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 item text">
+                        <h3>Company Name</h3>
+                        <p>Praesent sed lobortis mi. Suspendisse vel placerat ligula. Vivamus ac sem lacus. Ut vehicula rhoncus elementum. Etiam quis tristique lectus. Aliquam in arcu eget velit pulvinar dictum vel in justo.</p>
+                    </div>
+                    <div class="col item social" style="border-color: var(--dark);"><a href="#" style="background: var(--gray-dark);"><i class="icon ion-social-facebook"></i></a><a href="#" style="background: var(--gray-dark);"><i class="icon ion-social-twitter"></i></a><a href="#" style="background: var(--gray-dark);"><i class="icon ion-social-snapchat"></i></a><a href="#" style="background: var(--gray-dark);"><i class="icon ion-social-instagram"></i></a></div>
+                </div>
+                <p class="copyright" style="color: var(--gray-dark);">Company Name © 2021</p>
             </div>
-        </section>
-        <section class="Contact us">
-            <h1>Contact Us</h1>
-        </section>
-    </main>
+        </footer>
+    </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
-    <script src="assets/js/smoothproducts.min.js"></script>
-    <script src="assets/js/theme.js"></script>
+    <script src="assets/js/design.js"></script>
 </body>
 
 </html>
