--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Morningstar Lifestyles</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
-    <link rel="stylesheet" href="assets/css/Footer-Clean.css">
-    <link rel="stylesheet" href="assets/css/Footer-Dark.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=254667778b0f24b23e96ead43e0704fd">
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css?h=2cbf12caab31562d03bae9544edcad5f">
+    <link rel="stylesheet" href="assets/css/Footer-Clean.css?h=8f120d33c0bf092c48e3c98c6b1cd5d3">
+    <link rel="stylesheet" href="assets/css/Footer-Dark.css?h=cabc25193678a4e8700df5b6f6e02b7c">
+    <link rel="stylesheet" href="assets/css/styles.css?h=df1faae5edd35492e5197f04f3724530">
 </head>
 
 <body>
@@ -43,9 +43,11 @@
         <p class="text-center"><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt enim ac condimentum faucibus. Nam rhoncus, nunc id luctus venenatis, justo arcu fermentum lorem, ut vestibulum erat odio a lorem. Ut massa nibh, tristique at leo sed, cursus blandit dolor. Fusce rutrum venenatis accumsan. Fusce gravida consequat urna, vel laoreet sem euismod eget. Nulla facilisi. Maecenas risus diam, tincidunt vitae odio id, auctor sodales purus. Aliquam justo libero, finibus vel ex laoreet, vulputate lobortis lectus. Proin velit magna, rutrum et dignissim ac, aliquam vitae justo. Ut pulvinar, enim et venenatis pretium, nisl ex tristique purus, quis ullamcorper nisi metus vitae libero. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse tempor quam blandit elementum vestibulum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis at semper nibh, non imperdiet nunc.<br><br></p>
     </div>
     <div id="foot">
+        <!-- Start: Footer Dark -->
         <footer class="footer-dark" style="background: rgba(255,255,255,0.1);color: var(--gray-dark);">
             <div class="container">
                 <div class="row">
+                    <!-- Start: Services -->
                     <div class="col-sm-6 col-md-3 item">
                         <h3>Services</h3>
                         <ul>
@@ -53,7 +55,8 @@
                             <li><a href="#">Development</a></li>
                             <li><a href="#">Hosting</a></li>
                         </ul>
-                    </div>
+                    </div><!-- End: Services -->
+                    <!-- Start: About -->
                     <div class="col-sm-6 col-md-3 item">
                         <h3>About</h3>
                         <ul>
@@ -61,20 +64,22 @@
                             <li><a href="#">Team</a></li>
                             <li><a href="#">Careers</a></li>
                         </ul>
-                    </div>
+                    </div><!-- End: About -->
+                    <!-- Start: Footer Text -->
                     <div class="col-md-6 item text">
                         <h3>Company Name</h3>
                         <p>Praesent sed lobortis mi. Suspendisse vel placerat ligula. Vivamus ac sem lacus. Ut vehicula rhoncus elementum. Etiam quis tristique lectus. Aliquam in arcu eget velit pulvinar dictum vel in justo.</p>
-                    </div>
-                    <div class="col item social" style="border-color: var(--dark);"><a href="#" style="background: var(--gray-dark);"><i class="icon ion-social-facebook"></i></a><a href="#" style="background: var(--gray-dark);"><i class="icon ion-social-twitter"></i></a><a href="#" style="background: var(--gray-dark);"><i class="icon ion-social-snapchat"></i></a><a href="#" style="background: var(--gray-dark);"><i class="icon ion-social-instagram"></i></a></div>
-                </div>
-                <p class="copyright" style="color: var(--gray-dark);">Company Name © 2021</p>
+                    </div><!-- End: Footer Text -->
+                    <!-- Start: Social Icons -->
+                    <div class="col item social" style="border-color: var(--dark);"><a href="#" style="background: var(--gray-dark);"><i class="icon ion-social-facebook"></i></a><a href="#" style="background: var(--gray-dark);"><i class="icon ion-social-twitter"></i></a><a href="#" style="background: var(--gray-dark);"><i class="icon ion-social-snapchat"></i></a><a href="#" style="background: var(--gray-dark);"><i class="icon ion-social-instagram"></i></a></div><!-- End: Social Icons -->
+                </div><!-- Start: Copyright -->
+                <p class="copyright" style="color: var(--gray-dark);">Company Name © 2021</p><!-- End: Copyright -->
             </div>
-        </footer>
+        </footer><!-- End: Footer Dark -->
     </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/design.js"></script>
+    <script src="assets/js/jquery.min.js?h=84e399b8f2181ccd73394fdeddff1638"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js?h=ba42258394f86cd7822f0e850e2d60b1"></script>
+    <script src="assets/js/design.js?h=d41d8cd98f00b204e9800998ecf8427e"></script>
 </body>
 
 </html>
