--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Morningstar Lifestyles</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=254667778b0f24b23e96ead43e0704fd">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=ff38dd13b8af1bb760313f1cec8707dd">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css?h=2cbf12caab31562d03bae9544edcad5f">
-    <link rel="stylesheet" href="assets/css/Footer-Clean.css?h=8f120d33c0bf092c48e3c98c6b1cd5d3">
     <link rel="stylesheet" href="assets/css/Footer-Dark.css?h=cabc25193678a4e8700df5b6f6e02b7c">
-    <link rel="stylesheet" href="assets/css/styles.css?h=df1faae5edd35492e5197f04f3724530">
+    <link rel="stylesheet" href="assets/css/styles.css?h=a6d6dc166703c5fe5c9c7b5fa58b1fc4">
 </head>
 
-<body>
+<body style="background: url(&quot;assets/img/RainbowBackground_Preview_03_rotated.jpg?h=92dd95602c4c26cfa1f685d69d0983a3&quot;) center / cover no-repeat, rgba(255,255,255,0.5);opacity: 1;">
     <nav class="navbar navbar-light navbar-expand-md" id="options" style="padding-bottom: 9px;">
         <div class="container-fluid"><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
