--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Morningstar Lifestyles</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=ff38dd13b8af1bb760313f1cec8707dd">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=9e107eb69a52d91e9a46c81124c0fc16">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css?h=2cbf12caab31562d03bae9544edcad5f">
     <link rel="stylesheet" href="assets/css/Footer-Dark.css?h=cabc25193678a4e8700df5b6f6e02b7c">
     <link rel="stylesheet" href="assets/css/styles.css?h=a6d6dc166703c5fe5c9c7b5fa58b1fc4">
@@ -30,7 +30,7 @@
     <nav class="navbar navbar-light navbar-expand-md" id="brand">
         <div class="container-fluid"><a class="navbar-brand" href="#"><strong>Morningstar Lifestyles</strong></a></div>
     </nav>
-    <div id="about" style="padding-top: 130px;">
+    <div id="about" style="padding-top: 130px;background: rgba(255,255,255,0);">
         <div class="jumbotron">
             <h1>About Us</h1>
             <p><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt enim ac condimentum faucibus. Nam rhoncus, nunc id luctus venenatis, justo arcu fermentum lorem, ut vestibulum erat odio a lorem. Ut massa nibh, tristique at leo sed, cursus blandit dolor. Fusce rutrum venenatis accumsan. Fusce gravida consequat urna, vel laoreet sem euismod eget. Nulla facilisi. Maecenas risus diam, tincidunt vitae odio id, auctor sodales purus. Aliquam justo libero, finibus vel ex laoreet, vulputate lobortis lectus. Proin velit magna, rutrum et dignissim ac, aliquam vitae justo. Ut pulvinar, enim et venenatis pretium, nisl ex tristique purus, quis ullamcorper nisi metus vitae libero. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse tempor quam blandit elementum vestibulum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis at semper nibh, non imperdiet nunc.<br><br><br></p>
