--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Morningstar Lifestyles</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=9e107eb69a52d91e9a46c81124c0fc16">
-    <link rel="stylesheet" href="assets/fonts/ionicons.min.css?h=2cbf12caab31562d03bae9544edcad5f">
-    <link rel="stylesheet" href="assets/css/Footer-Dark.css?h=cabc25193678a4e8700df5b6f6e02b7c">
-    <link rel="stylesheet" href="assets/css/styles.css?h=a6d6dc166703c5fe5c9c7b5fa58b1fc4">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/css/Footer-Dark.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
-<body style="background: url(&quot;assets/img/RainbowBackground_Preview_03_rotated.jpg?h=92dd95602c4c26cfa1f685d69d0983a3&quot;) center / cover no-repeat, rgba(255,255,255,0.5);opacity: 1;">
-    <nav class="navbar navbar-light navbar-expand-md" id="options" style="padding-bottom: 9px;">
+<body id="home" style="background: url(&quot;assets/img/RainbowBackground_Preview_03_rotated.jpg&quot;) center / cover no-repeat, rgba(255,255,255,0.5);opacity: 1;">
+    <nav class="navbar navbar-light navbar-expand-md" id="options" style="padding-bottom: 9px;background: rgba(255,255,255,0.85);">
         <div class="container-fluid"><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto" style="text-align: center;">
                     <li class="nav-item"><a class="nav-link active text-nowrap" href="#about">The Morningstar Story</a></li>
                     <li class="nav-item"><a class="nav-link active text-nowrap" href="#whatwedo">Our Company</a></li>
                     <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#">Our Businesses</a>
-                        <div class="dropdown-menu"><a class="dropdown-item" href="#">Medicare</a><a class="dropdown-item" href="#">Consultation</a><a class="dropdown-item" href="https://www.aerosportsparks.ca/" target="_blank">Entertainment</a><a class="dropdown-item" href="#">Realty</a></div>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="Medicare.html" target="_blank">Medicare</a><a class="dropdown-item" href="#">Consultation</a><a class="dropdown-item" href="Entertainment.html" target="_blank">Entertainment</a><a class="dropdown-item" href="#">Realty</a></div>
                     </li>
                     <li class="nav-item"><a class="nav-link text-nowrap" href="#">Contact Us</a></li>
                     <li class="nav-item"></li>
@@ -27,12 +27,12 @@
             </div>
         </div>
     </nav>
-    <nav class="navbar navbar-light navbar-expand-md" id="brand">
+    <nav class="navbar navbar-light navbar-expand-md" id="brand" style="background: rgba(255,255,255,0);">
         <div class="container-fluid"><a class="navbar-brand" href="#"><strong>Morningstar Lifestyles</strong></a></div>
     </nav>
     <div id="about" style="padding-top: 130px;background: rgba(255,255,255,0);">
         <div class="jumbotron">
-            <h1>About Us</h1>
+            <h1>About&nbsp;</h1>
             <p><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt enim ac condimentum faucibus. Nam rhoncus, nunc id luctus venenatis, justo arcu fermentum lorem, ut vestibulum erat odio a lorem. Ut massa nibh, tristique at leo sed, cursus blandit dolor. Fusce rutrum venenatis accumsan. Fusce gravida consequat urna, vel laoreet sem euismod eget. Nulla facilisi. Maecenas risus diam, tincidunt vitae odio id, auctor sodales purus. Aliquam justo libero, finibus vel ex laoreet, vulputate lobortis lectus. Proin velit magna, rutrum et dignissim ac, aliquam vitae justo. Ut pulvinar, enim et venenatis pretium, nisl ex tristique purus, quis ullamcorper nisi metus vitae libero. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse tempor quam blandit elementum vestibulum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis at semper nibh, non imperdiet nunc.<br><br><br></p>
             <p></p>
         </div>
@@ -42,11 +42,9 @@
         <p class="text-center"><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt enim ac condimentum faucibus. Nam rhoncus, nunc id luctus venenatis, justo arcu fermentum lorem, ut vestibulum erat odio a lorem. Ut massa nibh, tristique at leo sed, cursus blandit dolor. Fusce rutrum venenatis accumsan. Fusce gravida consequat urna, vel laoreet sem euismod eget. Nulla facilisi. Maecenas risus diam, tincidunt vitae odio id, auctor sodales purus. Aliquam justo libero, finibus vel ex laoreet, vulputate lobortis lectus. Proin velit magna, rutrum et dignissim ac, aliquam vitae justo. Ut pulvinar, enim et venenatis pretium, nisl ex tristique purus, quis ullamcorper nisi metus vitae libero. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse tempor quam blandit elementum vestibulum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis at semper nibh, non imperdiet nunc.<br><br></p>
     </div>
     <div id="foot">
-        <!-- Start: Footer Dark -->
         <footer class="footer-dark" style="background: rgba(255,255,255,0.1);color: var(--gray-dark);">
             <div class="container">
                 <div class="row">
-                    <!-- Start: Services -->
                     <div class="col-sm-6 col-md-3 item">
                         <h3>Services</h3>
                         <ul>
@@ -54,8 +52,7 @@
                             <li><a href="#">Development</a></li>
                             <li><a href="#">Hosting</a></li>
                         </ul>
-                    </div><!-- End: Services -->
-                    <!-- Start: About -->
+                    </div>
                     <div class="col-sm-6 col-md-3 item">
                         <h3>About</h3>
                         <ul>
@@ -63,22 +60,20 @@
                             <li><a href="#">Team</a></li>
                             <li><a href="#">Careers</a></li>
                         </ul>
-                    </div><!-- End: About -->
-                    <!-- Start: Footer Text -->
+                    </div>
                     <div class="col-md-6 item text">
                         <h3>Company Name</h3>
                         <p>Praesent sed lobortis mi. Suspendisse vel placerat ligula. Vivamus ac sem lacus. Ut vehicula rhoncus elementum. Etiam quis tristique lectus. Aliquam in arcu eget velit pulvinar dictum vel in justo.</p>
-                    </div><!-- End: Footer Text -->
-                    <!-- Start: Social Icons -->
-                    <div class="col item social" style="border-color: var(--dark);"><a href="#" style="background: var(--gray-dark);"><i class="icon ion-social-facebook"></i></a><a href="#" style="background: var(--gray-dark);"><i class="icon ion-social-twitter"></i></a><a href="#" style="background: var(--gray-dark);"><i class="icon ion-social-snapchat"></i></a><a href="#" style="background: var(--gray-dark);"><i class="icon ion-social-instagram"></i></a></div><!-- End: Social Icons -->
-                </div><!-- Start: Copyright -->
-                <p class="copyright" style="color: var(--gray-dark);">Company Name © 2021</p><!-- End: Copyright -->
+                    </div>
+                    <div class="col item social" style="border-color: var(--dark);"><a href="#" style="background: var(--gray-dark);"><i class="icon ion-social-facebook"></i></a><a href="#" style="background: var(--gray-dark);"><i class="icon ion-social-twitter"></i></a><a href="#" style="background: var(--gray-dark);"><i class="icon ion-social-snapchat"></i></a><a href="#" style="background: var(--gray-dark);"><i class="icon ion-social-instagram"></i></a></div>
+                </div>
+                <p class="copyright" style="color: var(--gray-dark);">Company Name © 2021</p>
             </div>
-        </footer><!-- End: Footer Dark -->
+        </footer>
     </div>
-    <script src="assets/js/jquery.min.js?h=84e399b8f2181ccd73394fdeddff1638"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js?h=ba42258394f86cd7822f0e850e2d60b1"></script>
-    <script src="assets/js/design.js?h=d41d8cd98f00b204e9800998ecf8427e"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/design.js"></script>
 </body>
 
 </html>
